Fixing button display on firefox

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -164,6 +164,7 @@
 	border-radius: 0.3rem;
   padding: 1rem;
   transition: background-color 0.2s, box-shadow 0.2s;
+  display: block;
 }
 
 .ieee-btn:hover {
